improve styles, change new pages

--- a/index.html
+++ b/index.html
@@ -52,22 +52,12 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item active">
-              <a class="nav-link" href="intencje.html">Chill-out<span class="sr-only"></span></a>
+              <a class="nav-link" href="offers.html">Chill-out<span class="sr-only"></span></a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="sakramenty.html">Active holidays<span class="sr-only"></span></a>
+              <a class="nav-link" href="numbers.html">Active holidays<span class="sr-only"></span></a>
             </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true"
-                aria-expanded="false">
-                    Destinations
-                  </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <a class="dropdown-item" href="./bands/maranatha.html">Santorini</a>
-                <a class="dropdown-item" href="./bands/andrew-angels.html">Crete</a>
-                <a class="dropdown-item" href="../bands/miriam.html">Rhodos</a>
-              </div>
-            </li>
+
           </ul>
         </div>
       </div>
@@ -236,7 +226,6 @@
             </div>
           </div>
         </div>
-
       </div>
     </div>
   </section>
@@ -253,7 +242,7 @@
           <h5>0</h5>
           <p class="number-caption client-number-caption">happy clients</p>
         </div>
-        <div class="number projects-groups" data-final-number='18'>
+        <div class="number projects-groups" data-final-number='309'>
           <i class="fab fa-gratipay"></i>
           <h5>0</h5>
           <p class="number-caption projects-groups-caption">projects made</p>
@@ -265,7 +254,7 @@
     <div class="container footer-top">
       <div class="row">
         <div class="col about-us">
-          <h4>O parafii</h4>
+          <h4>about</h4>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis error magnam dolor numquam provident
             cupiditate
             laudantium. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis error magnam dolor numquam
@@ -273,8 +262,8 @@
             cupiditate laudantium. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis error magnam
             dolor
             numquam provident cupiditate laudantium</p>
-          <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-lg">Historia
-            parafii</button>
+          <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-lg">Step by
+            step</button>
           <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel"
             aria-hidden="true">
             <div class="modal-dialog modal-lg">
@@ -428,36 +417,32 @@
           </div>
         </div>
         <div class="col address">
-          <h4>kontakt</h4>
+          <h4>contact</h4>
           <div class="row nested">
-            <div class="col-6">Adres:</div>
-            <div class="col-6">ul. Kościelna 16 98-270 Złoczew Poland</div>
+            <div class="col-6">Address:</div>
+            <div class="col-6">14 Happy St <br>00-000 City Poland</div>
           </div>
           <div class="row nested">
-            <div class="col-6">Telephonon:</div>
+            <div class="col-6">Telephone:</div>
             <div class="col-6">+48 43 8202210</div>
           </div>
-          <!-- <div class="row nested">
-            <div class="col col-6">E-mail:</div>
-            <div class="col col-6">success@gmail.com</div>
-          </div> -->
           <div class="row nested">
-            <div class="col col-6">Numer konta:</div>
-            <div class="col col-6">30925600040044623120000030</div>
+            <div class="col col-6">Account no:</div>
+            <div class="col col-6">3092560004004462312</div>
           </div>
         </div>
         <div class="col statistics-office">
-          <h4>kancelaria parafialna</h4>
+          <h4>happy hours</h4>
           <div class="row nested">
-            <div class="col col-6">Wtorek:</div>
+            <div class="col col-6">Tuesday:</div>
             <div class="col col-6">16.00 - 17.00</div>
           </div>
           <div class="row nested">
-            <div class="col col-6">Czwartek:</div>
+            <div class="col col-6">Thursday:</div>
             <div class="col col-6">16.00 - 17.00</div>
           </div>
           <div class="row nested">
-            <div class="col col-6">Sobota:</div>
+            <div class="col col-6">Saturday:</div>
             <div class="col col-6">08.30 - 10.00</div>
           </div>
         </div>
@@ -466,16 +451,16 @@
     <div class="container service-time-container">
       <div class="row">
         <div class="col service-time">
-          <h3>porządek mszy świętych</h3>
+          <h3>regular working hours</h3>
         </div>
       </div>
       <div class="row">
         <div class="col service-time-weekdays">
-          <h5>Dni powszednie</h5>
+          <h5>Week days</h5>
           <div class="service-hours-container ">
             <div class="row nested">
               <div class="col col-6">
-                <p>Rano</p>
+                <p>Tom</p>
               </div>
               <div class="col col-6">
                 <p>07.00</p>
@@ -483,7 +468,7 @@
             </div>
             <div class="row nested">
               <div class="col col-6">
-                <p>Wieczorem</p>
+                <p>Ana</p>
               </div>
               <div class="col col-6">
                 <p>18.00</p>
@@ -492,11 +477,11 @@
           </div>
         </div>
         <div class="col service-time-holidays">
-          <h5>Niedziela i Święta</h5>
+          <h5>Weekends and holidays</h5>
           <div class="service-hours-container">
             <div class="row nested">
               <div class="col col-6">
-                <p>Klasztor</p>
+                <p>Joe</p>
               </div>
               <div class="col col-6">
                 <p>07.00</p>
@@ -504,7 +489,7 @@
             </div>
             <div class="row nested">
               <div class="col col-6">
-                <p>Fara</p>
+                <p>Christine</p>
               </div>
               <div class="col col-6">
                 <p>09.30</p>
@@ -512,7 +497,7 @@
             </div>
             <div class="row nested">
               <div class="col col-6">
-                <p>Fara</p>
+                <p>Ted</p>
               </div>
               <div class="col col-6">
                 <p>10.00</p>
@@ -520,18 +505,10 @@
             </div>
             <div class="row nested">
               <div class="col col-6">
-                <p>Fara</p>
+                <p>Clare</p>
               </div>
               <div class="col col-6">
                 <p>11.30</p>
-              </div>
-            </div>
-            <div class="row nested">
-              <div class="col col-6">
-                <p>Fara</p>
-              </div>
-              <div class="col col-6">
-                <p>18.00</p>
               </div>
             </div>
           </div>
