improve RWD, styles, js code

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <div class="jubotron jumbotron-fluid" id="up">
+  <div class="jumbotron jumbotron-fluid">
     <div id="carouselExampleSlidesOnly" class="carousel slide my-jumbotron-carousel carousel-fade" data-ride="carousel"
       data-interval="15000" data-pause="false">
       <div class="carousel-inner">
@@ -229,7 +229,7 @@
       </div>
     </div>
   </section>
-  <section id="scroll-detector" class="statistics-figures">
+  <section class="statistics-figures">
     <div class="container">
       <div class="statistics-figures-container">
         <div class="number area-number" data-final-number='303'>
@@ -252,7 +252,7 @@
   </section>
   <footer>
     <div class="container footer-top">
-      <div class="row">
+      <div class="row upper-part">
         <div class="col about-us">
           <h4>about</h4>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis error magnam dolor numquam provident
