improve bugs in countTo jquery

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       </div>
     </nav>
   </div>
-  <section class="updates-board">
+  <section class="updates-board arrow-show-now">
     <h3>What's going on here?</h3>
     <div class="container updates-board-container">
       <div class="current-updates-one hover-style">
