--- a/numbers.html
+++ b/numbers.html
@@ -40,7 +40,7 @@
 		</div>
 	</nav>
 	<div class="white-stripe" id='up'></div>
-	<div class="my-container">
+	<div class="my-container arrow-show-now">
 		<div id="list-example" class="list-group">
 			<a class="list-group-item list-group-item-action" href="#list-item-1">Info ONE</a>
 			<a class="list-group-item list-group-item-action" href="#list-item-2">Info TWO</a>
@@ -130,7 +130,7 @@
 	<div class="white-stripe" id="top-of-the-page"></div>
 	<footer>
 		<div class="container footer-top">
-			<div class="row">
+			<div class="row upper-part">
 				<div class="col about-us">
 					<h4>about</h4>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis error magnam dolor numquam
