--- a/offers.html
+++ b/offers.html
@@ -42,7 +42,7 @@
     <p>Italy and Greece</p>
     <p>Call 111-111-111</p>
   </div>
-  <div class="service-times">
+  <div class="service-times arrow-show-now">
     <h3>TOP OFFERS</h3>
     <div class="container">
       <ul class="nav nav-tabs" id="myTab" role="tablist">
@@ -341,7 +341,7 @@
   <div class="white-stripe" id="top-of-the-page"></div>
   <footer>
     <div class="container footer-top">
-      <div class="row">
+      <div class="row upper-part">
         <div class="col about-us">
           <h4>about</h4>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis error magnam dolor numquam provident
