--- a/index.html
+++ b/index.html
@@ -36,8 +36,10 @@
             <h5>Enjoy the silence</h5>
           </div>
         </div>
+        <div class="carousel-start-button"><button>let's start</button></div>
       </div>
     </div>
+
     <nav class="navbar navbar-expand-lg fixed-top">
       <div class="container">
         <a class="navbar-brand" href="index.html">BRAND
@@ -57,7 +59,6 @@
             <li class="nav-item active">
               <a class="nav-link" href="numbers.html">Active holidays<span class="sr-only"></span></a>
             </li>
-
           </ul>
         </div>
       </div>
